@@ -1,4 +1,5 @@
 4.3.1
+	Make LDAP querries timeout configurable
 	Make MX sync timeout peer-configurable (Attila Bruncsak)
 	Fix a crash when LDAP server is down
 	Update contributor list
